--- a/docker-install.yaml
+++ b/docker-install.yaml
@@ -32,7 +32,7 @@
   #     - docker
 
    - handlers:
-    - name: restart docker
+      name: restart docker
       service:
         name: docker
         state: restarted
