--- a/playbook.yaml
+++ b/playbook.yaml
@@ -31,8 +31,8 @@
   #   tags:
   #     - docker
 
-  handlers:
-    - name: restart docker
+   - handlers:
+      name: restart docker
       service:
         name: docker
         state: restarted
