--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,7 @@
----
-- hosts: all
+- name: Hello World Sample
+  hosts: all
   tasks:
-    - name: Print message
+    - name: Hello Message
       debug:
-        msg: Hello Ansible World
+        msg: "Hello World!"
+
