--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,7 @@
 - name: Hello World Sample
-  hosts: all
+  hosts: devops01
+  become: yes
+  become_user: root
   tasks:
     - name: Hello Message
       debug:
