--- a/playbook.yml
+++ b/playbook.yml
@@ -1,9 +1,13 @@
-- name: Hello World Sample
-  hosts: devops01
-  become: yes
-  become_user: root
-  tasks:
-    - name: Hello Message
-      debug:
-        msg: "Hello World!"
-
+  - name: Playbook
+    hosts: devops01
+    become: yes
+    become_user: root
+    tasks:
+      - name: ensure apache is at the latest version
+        yum:
+          name: httpd
+          state: latest
+      - name: ensure apache is running
+        service:
+          name: httpd
+          state: started
