--- a/playbook.yml
+++ b/playbook.yml
@@ -3,11 +3,32 @@
     become: yes
     become_user: root
     tasks:
-      - name: ensure apache is at the latest version
-        yum:
-          name: httpd
-          state: latest
-      - name: ensure apache is running
+      - name: Docker Service Enable
         service:
-          name: httpd
-          state: started
+        name: docker
+        state: started
+        enabled: yes
+        
+      - name: Install Docker Compose
+        get_url:
+        url: https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
+        dest: /usr/local/bin/docker-compose
+        #mode: 755
+        mode: 'a+x'
+        
+      - name: Create docker group
+        group:
+           name: "docker"
+           state: present
+           
+      - name: Adding user {{ USER }} to docker group
+        user:
+          name: "devops"
+          groups: "docker"
+          append: "yes"
+          
+      - handlers:
+         name: restart docker
+         service:
+           name: docker
+           state: restarted
