--- a/playbook.yml
+++ b/playbook.yml
@@ -9,25 +9,25 @@
         state: started
         enabled: yes
         
-      - name: Install Docker Compose
+      #- name: Install Docker Compose
         get_url:
         url: https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
         dest: /usr/local/bin/docker-compose
         #mode: 755
         mode: 'a+x'
         
-      - name: Create docker group
+      #- name: Create docker group
         group:
            name: "docker"
            state: present
            
-      - name: Adding user {{ USER }} to docker group
+      #- name: Adding user {{ USER }} to docker group
         user:
           name: "devops"
           groups: "docker"
           append: "yes"
           
-      - handlers:
+      #- handlers:
          name: restart docker
          service:
            name: docker
