--- a/playbook.yml
+++ b/playbook.yml
@@ -29,6 +29,6 @@
           
       #- handlers:
        #  name: restart docker
-         service:
-           name: docker
-           state: restarted
+        # service:
+         #  name: docker
+          # state: restarted
