--- a/playbook.yml
+++ b/playbook.yml
@@ -1,34 +1,7 @@
-  #- name: Playbook
-    hosts: devops01
-    become: yes
-    become_user: root
-    tasks:
-      #- name: Docker Service Enable
-        service:
-        name: docker
-        state: started
-        enabled: yes
-        
-      #- name: Install Docker Compose
-        get_url:
-        url: https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
-        dest: /usr/local/bin/docker-compose
-        #mode: 755
-        mode: 'a+x'
-        
-      #- name: Create docker group
-        group:
-           name: "docker"
-           state: present
-           
-      #- name: Adding user {{ USER }} to docker group
-        user:
-          name: "devops"
-          groups: "docker"
-          append: "yes"
-          
-      #- handlers:
-       #  name: restart docker
-        # service:
-         #  name: docker
-          # state: restarted
+  - name: Hello World Sample
+  hosts: all
+  tasks:
+    - name: Hello Message
+      debug:
+        msg: "Hello World!"
+
