--- a/playbook.yml
+++ b/playbook.yml
@@ -11,4 +11,11 @@
    #- firewalld
    #- ntp-config
    #- motd   
- 
+- name: ensure apache is at the latest version
+  yum:
+  name: httpd
+  state: latest
+- name: ensure apache is running
+  service:
+  name: httpd
+  state: started
